--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   "keywords": [],
   "author": "Administrator",
   "license": "MIT",
-  "build": {  
+  "build": {
     "appId": "com.duer.auto-i18n",
-    "copyright":"DUER",
-    "productName":"auto-i18n",
+    "copyright": "DUER",
+    "productName": "auto-i18n",
     "directories": {
       "output": "dist"
     },
-    "win": {  
-        "icon": "./src/icon.ico"
-    }  
+    "win": {
+      "icon": "./src/icon.ico"
+    }
   },
   "config": {
     "forge": {
@@ -70,6 +70,8 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "electron": "^7.0.0",
+    "electron-builder": "^22.1.0",
     "electron-forge": "^5.2.4",
     "electron-prebuilt-compile": "4.0.0"
   }
